Trigger tests for all vendors

--- a/.github/workflows/blackbox-main.yml
+++ b/.github/workflows/blackbox-main.yml
@@ -1,6 +1,9 @@
 name: Blackbox Tests
 
 on:
+  pull_request: # Remember to remove when all tests pass
+    branches:
+      - main
   push:
     branches:
       - main
