--- a/api/src/database/system-data/fields/collections.yaml
+++ b/api/src/database/system-data/fields/collections.yaml
@@ -114,7 +114,7 @@ fields:
     interface: system-display-template
     options:
       collectionField: collection
-      injectBranchField: true
+      injectVersionField: true
     width: full
 
   - field: content_versioning_divider
@@ -127,12 +127,12 @@ fields:
       title: $t:field_options.directus_collections.content_versioning_divider
     width: full
 
-  - field: branches_enabled
+  - field: versioning
     interface: boolean
     special:
       - cast-boolean
     options:
-      label: $t:field_options.directus_collections.enable_branches
+      label: $t:field_options.directus_collections.enable_versioning
     width: half
 
   - field: archive_divider
