--- a/packages/release-notes-generator/package.json
+++ b/packages/release-notes-generator/package.json
@@ -28,6 +28,7 @@
 		"@changesets/get-github-info": "0.5.2",
 		"@pnpm/find-workspace-dir": "6.0.0",
 		"@pnpm/find-workspace-packages": "6.0.8",
+		"@pnpm/workspace.pkgs-graph": "2.0.6",
 		"semver": "7.5.1"
 	},
 	"devDependencies": {
