--- a/api/package.json
+++ b/api/package.json
@@ -81,6 +81,7 @@
 		"@directus/storage-driver-local": "workspace:*",
 		"@directus/storage-driver-s3": "workspace:*",
 		"@directus/storage-driver-supabase": "workspace:*",
+		"@directus/tmp-fs": "workspace:*",
 		"@directus/utils": "workspace:*",
 		"@directus/validation": "workspace:*",
 		"@godaddy/terminus": "4.12.0",
@@ -157,7 +158,6 @@
 		"snappy": "7.2.2",
 		"stream-json": "1.7.5",
 		"strip-bom-stream": "5.0.0",
-		"tmp-promise": "3.0.3",
 		"tsx": "3.12.7",
 		"uuid": "9.0.0",
 		"uuid-validate": "0.0.3",
