add fields to directus_versions

--- a/api/src/database/system-data/fields/versions.yaml
+++ b/api/src/database/system-data/fields/versions.yaml
@@ -6,6 +6,7 @@ fields:
       - uuid
     readonly: true
     hidden: true
+  - field: key
   - field: name
   - field: collection
   - field: item
@@ -14,6 +15,13 @@ fields:
     special:
       - date-created
       - cast-timestamp
+  - field: date_updated
+    special:
+      - date-updated
+      - cast-timestamp
   - field: user_created
     special:
       - user-created
+  - field: user_updated
+    special:
+      - user-updated
