--- a/packages/webcontainer/directus/api/package.json
+++ b/packages/webcontainer/directus/api/package.json
@@ -77,6 +77,7 @@
 		"@directus/storage": "10.0.5",
 		"@directus/utils": "10.0.10",
 		"@directus/validation": "0.0.5",
+		"@directus/storage-driver-local": "10.0.10",
 		"@godaddy/terminus": "4.12.0",
 		"@rollup/plugin-alias": "5.0.0",
 		"@rollup/plugin-node-resolve": "15.0.2",
@@ -88,7 +89,6 @@
 		"bytes": "3.1.2",
 		"camelcase": "7.0.1",
 		"chalk": "5.2.0",
-		"argon2-wasm": "^0.9.0",
 		"chokidar": "3.5.3",
 		"commander": "10.0.1",
 		"content-disposition": "0.5.4",
