--- a/packages/webcontainer/directus/api/package.json
+++ b/packages/webcontainer/directus/api/package.json
@@ -82,7 +82,6 @@
 		"@rollup/plugin-alias": "5.0.0",
 		"@rollup/plugin-node-resolve": "15.0.2",
 		"@rollup/plugin-virtual": "3.0.1",
-		"argon2": "0.30.3",
 		"async": "3.2.4",
 		"axios": "1.4.0",
 		"busboy": "1.6.0",
@@ -149,7 +148,6 @@
 		"samlify": "2.8.10",
 		"sanitize-html": "2.10.0",
 		"sharp": "0.32.5",
-		"snappy": "7.2.2",
 		"stream-json": "1.7.5",
 		"strip-bom-stream": "5.0.0",
 		"tmp-promise": "3.0.3",
@@ -166,49 +164,10 @@
 		"@directus/tsconfig": "1.0.0",
 		"@directus/types": "10.1.6",
 		"@ngneat/falso": "6.4.0",
-		"@types/async": "3.2.20",
-		"@types/busboy": "1.5.0",
-		"@types/bytes": "3.1.1",
-		"@types/content-disposition": "0.5.5",
-		"@types/cookie-parser": "1.4.3",
-		"@types/cors": "2.8.13",
-		"@types/deep-diff": "1.0.2",
-		"@types/destroy": "1.0.0",
-		"@types/encodeurl": "1.0.0",
-		"@types/exif-reader": "1.0.0",
-		"@types/express": "4.17.17",
-		"@types/express-serve-static-core": "4.17.35",
-		"@types/flat": "5.0.2",
-		"@types/fs-extra": "11.0.1",
-		"@types/inquirer": "9.0.3",
-		"@types/js-yaml": "4.0.5",
-		"@types/json2csv": "5.0.3",
-		"@types/jsonwebtoken": "9.0.2",
-		"@types/keyv": "4.2.0",
-		"@types/ldapjs": "2.2.5",
-		"@types/lodash-es": "4.17.7",
-		"@types/marked": "4.3.0",
-		"@types/mime-types": "2.1.1",
-		"@types/ms": "0.7.31",
-		"@types/node": "18.16.12",
-		"@types/node-schedule": "2.1.0",
-		"@types/nodemailer": "6.4.7",
-		"@types/object-hash": "3.0.2",
-		"@types/qs": "6.9.7",
-		"@types/sanitize-html": "2.9.0",
-		"@types/stream-json": "1.7.3",
-		"@types/supertest": "2.0.12",
-		"@types/uuid": "9.0.1",
-		"@types/uuid-validate": "0.0.1",
-		"@types/wellknown": "0.5.4",
-		"@types/ws": "8.5.4",
-		"@vitest/coverage-c8": "0.31.1",
 		"copyfiles": "2.4.1",
 		"form-data": "4.0.0",
-		"knex-mock-client": "2.0.0",
 		"supertest": "6.3.3",
-		"typescript": "5.0.4",
-		"vitest": "0.31.1"
+		"typescript": "5.0.4"
 	},
 	"optionalDependencies": {
 		"@keyv/redis": "2.5.8",
