--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -24,16 +24,15 @@
 	"type": "module",
 	"exports": {
 		".": "./dist/index.js",
-		"./package.json": "./package.json",
-		"./types/overview": "./dist/types/overview.js"
+		"./package.json": "./package.json"
 	},
 	"main": "dist/index.js",
 	"files": [
 		"dist"
 	],
 	"scripts": {
-		"build": "tsup src/index.ts src/types/overview.ts --format=esm --dts",
-		"dev": "tsup src/index.ts src/types/overview.ts --format=esm --dts --watch"
+		"build": "tsup src/index.ts --format=esm --dts",
+		"dev": "tsup src/index.ts --format=esm --dts --watch"
 	},
 	"dependencies": {
 		"knex": "2.4.2"
