--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -25,6 +25,7 @@
 		"dev": "tsc --watch"
 	},
 	"dependencies": {
+		"@directus/api": "workspace:*",
 		"@directus/constants": "workspace:*",
 		"@directus/schema": "workspace:*",
 		"@types/express": "4.17.17",
