--- a/packages/webcontainer/directus/package.json
+++ b/packages/webcontainer/directus/package.json
@@ -11,7 +11,8 @@
 		"test:blackbox": "pnpm --filter directus deploy --prod dist && pnpm --filter tests-blackbox test"
 	},
 	"devDependencies": {
-		"tsx": "3.12.7"
+		"tsx": "3.12.7",
+		"node-fetch": "3.3.2"
 	},
 	"packageManager": "pnpm@8.7.4",
 	"engines": {
