--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -24,25 +24,22 @@
 	"type": "module",
 	"exports": {
 		".": "./dist/index.js",
-		"./package.json": "./package.json",
-		"./types/overview": {
-			"types": "./dist/types/overview.d.ts",
-			"default": "./dist/types/overview.js"
-		}
+		"./package.json": "./package.json"
 	},
 	"main": "dist/index.js",
 	"files": [
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc --project tsconfig.prod.json",
-		"dev": "tsc --watch"
+		"build": "tsup src/index.ts --format=esm --dts",
+		"dev": "tsup src/index.ts --format=esm --dts --watch"
 	},
 	"dependencies": {
 		"knex": "2.4.2"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
+		"tsup": "7.1.0",
 		"typescript": "5.0.4"
 	}
 }
