add POC for onboarding route

--- a/api/src/database/system-data/fields/settings.yaml
+++ b/api/src/database/system-data/fields/settings.yaml
@@ -410,3 +410,6 @@ fields:
             required: true
             options:
               placeholder: $t:value
+  - field: onboarding
+    readonly: true
+    hidden: true
