--- a/packages/sdk-schema-generator/package.json
+++ b/packages/sdk-schema-generator/package.json
@@ -9,12 +9,12 @@
 		"directory": "packages/sdk-schema-generator"
 	},
 	"funding": "https://github.com/directus/directus?sponsor=1",
-	"license": "MIT",
+	"license": "BUSL-1.1",
 	"author": "Tim de Heiden <tim@directus.io>",
 	"type": "module",
 	"exports": {
 		".": "./dist/index.js",
-		"./cli": "./dist/cli/index.js",
+		"./cli": "./dist/cli.js",
 		"./package.json": "./package.json"
 	},
 	"main": "dist/index.js",
@@ -25,9 +25,8 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc --project tsconfig.prod.json",
-		"dev": "tsc --watch",
-		"test": "vitest --watch=false"
+		"build": "tsup src/index.ts --format=esm --dts",
+		"dev": "tsup src/index.ts --format=esm --dts --watch"
 	},
 	"dependencies": {
 		"commander": "10.0.1"
@@ -36,7 +35,7 @@
 		"@directus/tsconfig": "workspace:*",
 		"@directus/types": "workspace:*",
 		"@types/node": "18.16.12",
-		"typescript": "5.0.4",
-		"vitest": "0.31.1"
+		"typescript": "5.2.2",
+		"tsup": "7.1.0"
 	}
 }
