--- a/api/package.json
+++ b/api/package.json
@@ -157,6 +157,7 @@
 		"snappy": "7.2.2",
 		"stream-json": "1.7.5",
 		"strip-bom-stream": "5.0.0",
+		"tinypool": "0.8.1",
 		"tsx": "3.12.7",
 		"uuid": "9.0.0",
 		"uuid-validate": "0.0.3",
