--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -25,9 +25,10 @@
 		"schema.json"
 	],
 	"scripts": {
-		"build": "vite build",
+		"build": "vite build && npm run generate-json-schema",
 		"dev": "vite",
-		"test": "vitest --watch=false"
+		"test": "vitest --watch=false",
+		"generate-json-schema": "node generate-json-schema.js"
 	},
 	"devDependencies": {
 		"@directus/tsconfig": "workspace:*",
