--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,7 +23,7 @@
 	],
 	"scripts": {
 		"build": "vite build",
-		"dev": "vite",
+		"dev": "vite build",
 		"test": "vitest --watch=false",
 		"story:dev": "histoire dev",
 		"story:build": "histoire build",
