--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -26,7 +26,7 @@
 	],
 	"scripts": {
 		"build": "vite build && npm run generate-json-schema",
-		"dev": "vite",
+		"dev": "vite build --watch",
 		"test": "vitest --watch=false",
 		"generate-json-schema": "node generate-json-schema.js"
 	},
