--- a/api/package.json
+++ b/api/package.json
@@ -73,6 +73,7 @@
 		"@directus/format-title": "10.0.0",
 		"@directus/pressure": "workspace:*",
 		"@directus/schema": "workspace:*",
+		"@directus/sdk-schema-generator": "workspace:*",
 		"@directus/specs": "workspace:*",
 		"@directus/storage": "workspace:*",
 		"@directus/storage-driver-azure": "workspace:*",
