--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,6 @@ TODO
 /api/extensions/
 /tests/blackbox/uploads/
 /tests/blackbox/server-log-*
+/tests/blackbox/sequencer-data.json
 /packages/extensions-sdk/temp-extension-*/
 /docs/packages/
