remove directus_extension_permissions table

--- a/api/src/database/system-data/fields/extensions.yaml
+++ b/api/src/database/system-data/fields/extensions.yaml
@@ -5,6 +5,9 @@ fields:
   - field: enabled
     special:
       - cast-boolean
+  - field: granted_permissions
+    special:
+      - cast-json
   - field: options
     special:
       - cast-json
