add exec function typing

--- a/packages/extensions-sdk/templates/common/typescript-secure/config/tsconfig.json
+++ b/packages/extensions-sdk/templates/common/typescript-secure/config/tsconfig.json
@@ -28,7 +28,7 @@
 		"rootDir": "./src",
 		"typeRoots": [
 			"./node_modules/@types",
-			"./src/api.d.ts"
+			"./src/exec.d.ts"
 		],
 	},
 	"include": [
