Add custom css to theming group

--- a/api/src/database/system-data/fields/settings.yaml
+++ b/api/src/database/system-data/fields/settings.yaml
@@ -131,6 +131,7 @@ fields:
           --sidebar-detail-color-active: #5E41EC !important;
         }
     width: full
+    group: theming_group
 
   - field: modules_divider
     interface: presentation-divider
