--- a/.github/workflows/blackbox-main.yml
+++ b/.github/workflows/blackbox-main.yml
@@ -62,18 +62,25 @@ jobs:
         run:
           docker compose -f tests/blackbox/docker-compose.yml up auth-saml redis minio minio-mc -d --quiet-pull --wait
 
-      - name: Install dbatools module (MSSQL)
-        if: matrix.vendor == 'mssql'
-        uses: potatoqualitee/psmodulecache@v5.2
-        with:
-          modules-to-cache: dbatools
-
       - name: Start services (MSSQL)
         if: matrix.vendor == 'mssql'
         shell: pwsh
         run: |
-          choco install sql-server-2019 -y --no-progress --params="'/SAPWD:Test@123'"
-          Set-DbaTcpPort -SqlInstance MSSQLSERVER -Port 6105
+          # Install SQL Server Express 2022
+          choco install sql-server-express --version=2022.16.0.1000 --yes --no-progress --params="'/SAPWD:Test@123'"
+
+          # Enable TCP on port 6105
+          sqlps -Command "&{
+            `$smo = 'Microsoft.SqlServer.Management.Smo.'
+            `$wmi = new-object (`$smo + 'Wmi.ManagedComputer')
+            `$uri = 'ManagedComputer[@Name=''' + (get-item env:\computername).Value + ''']/ServerInstance[@Name=''SQLEXPRESS'']/ServerProtocol[@Name=''Tcp'']'
+            `$Tcp = `$wmi.GetSmoObject(`$uri)
+            `$Tcp.IsEnabled = `$true
+            `$wmi.GetSmoObject(`$uri + '/IPAddress[@Name=''IPAll'']').IPAddressProperties[1].Value='6105'
+            `$Tcp.Alter()
+          }"
+          Restart-Service -Name 'MSSQL$SQLEXPRESS'
+
           docker compose -f tests/blackbox/docker-compose.yml up auth-saml redis minio minio-mc -d --quiet-pull --wait
 
       - name: Start services (other vendors)
