Import: Do task in a separate worker (#19691)
Co-authored-by: Pascal Jufer <pascal-jufer@bluewin.ch>
Co-authored-by: ian <licitdev@gmail.com>

--- a/api/package.json
+++ b/api/package.json
@@ -157,7 +157,7 @@
 		"snappy": "7.2.2",
 		"stream-json": "1.7.5",
 		"strip-bom-stream": "5.0.0",
-		"tmp-promise": "3.0.3",
+		"tinypool": "0.8.1",
 		"tsx": "3.12.7",
 		"uuid": "9.0.0",
 		"uuid-validate": "0.0.3",
