--- a/.github/workflows/blackbox-main.yml
+++ b/.github/workflows/blackbox-main.yml
@@ -26,7 +26,7 @@ env:
 jobs:
   test:
     name: ${{ matrix.vendor }}
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.vendor == 'mssql' && 'ubuntu-20.04' || 'ubuntu-latest' }}
     strategy:
       fail-fast: false
       matrix:
