Revert "Test all vendors"
This reverts commit d6fbdd76c9f5dd6eed89ff6afbb0d132a56e32f2.

--- a/.github/workflows/blackbox-main.yml
+++ b/.github/workflows/blackbox-main.yml
@@ -12,12 +12,9 @@ on:
       - package.json
       - pnpm-lock.yaml
       - .github/workflows/blackbox-main.yml
-  pull_request:
-    branches:
-      - main
 
 concurrency:
-  group: blackbox-main-vitest
+  group: blackbox-${{ github.ref }}
   cancel-in-progress: true
 
 env:
