--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@directus/constants": "workspace:*",
+		"@directus/storage": "workspace:*",
 		"date-fns": "2.30.0",
 		"fs-extra": "11.1.1",
 		"joi": "17.9.2",
