--- a/.github/workflows/blackbox-main.yml
+++ b/.github/workflows/blackbox-main.yml
@@ -12,12 +12,9 @@ on:
       - package.json
       - pnpm-lock.yaml
       - .github/workflows/blackbox-main.yml
-  pull_request:
-    branches:
-      - next
 
 concurrency:
-  group: blackbox-api-aggregated-sort
+  group: blackbox-${{ github.ref }}
   cancel-in-progress: true
 
 env:
