Add a theme-overrides interface (#19970)
* Install typebox

* Rough in overrides interface

* Update theming settings in settings

* Upgrade dependencies

* Move theme output generation to separate composable

* Upgrade typebox

* Rename app/use-theme to use theme config

* Rework overrides interface

* Add changeset

* Allow default inheritAttrs

--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
 		"@pinia/testing": "0.1.1",
 		"@popperjs/core": "2.11.7",
 		"@rollup/plugin-yaml": "4.1.0",
+		"@sinclair/typebox": "0.31.17",
 		"@sindresorhus/slugify": "2.2.1",
 		"@storybook/addon-actions": "7.0.12",
 		"@storybook/addon-backgrounds": "7.0.12",
