--- a/api/package.json
+++ b/api/package.json
@@ -101,7 +101,6 @@
 		"cookie-parser": "1.4.6",
 		"cors": "2.8.5",
 		"cron-parser": "4.8.1",
-		"csv-parser": "3.0.0",
 		"date-fns": "2.30.0",
 		"deep-diff": "1.0.2",
 		"destroy": "1.2.0",
@@ -145,6 +144,7 @@
 		"openid-client": "5.4.2",
 		"ora": "6.3.1",
 		"otplib": "12.0.1",
+		"papaparse": "5.4.1",
 		"pino": "8.14.1",
 		"pino-http": "8.3.3",
 		"pino-http-print": "3.1.0",
@@ -200,6 +200,7 @@
 		"@types/node-schedule": "2.1.0",
 		"@types/nodemailer": "6.4.7",
 		"@types/object-hash": "3.0.2",
+		"@types/papaparse": "5.3.9",
 		"@types/qs": "6.9.7",
 		"@types/sanitize-html": "2.9.0",
 		"@types/stream-json": "1.7.3",
