--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -13,24 +13,25 @@
 	"author": "Rijk van Zanten <rijkvanzanten@me.com>",
 	"type": "module",
 	"exports": {
-		".": "./dist/shared/index.js",
-		"./node": "./dist/node/index.js",
+		".": "./dist/index.js",
+		"./node": "./dist/node.js",
 		"./package.json": "./package.json"
 	},
-	"main": "dist/shared/index.js",
+	"main": "dist/index.js",
 	"files": [
 		"dist"
 	],
 	"scripts": {
 		"build": "concurrently --group 'pnpm:build:*'",
-		"build:node": "tsup node/index.ts --tsconfig node/tsconfig.json --out-dir dist/node --format=esm --dts",
-		"build:shared": "tsup shared/index.ts --tsconfig shared/tsconfig.json --out-dir dist/shared --format=esm --dts",
+		"build:node": "tsup src/node.ts --tsconfig src/node/tsconfig.json --out-dir dist --format=esm --dts",
+		"build:shared": "tsup src/index.ts --tsconfig src/tsconfig.json --out-dir dist --format=esm --dts",
 		"dev": "concurrently 'pnpm:build:* --watch'",
 		"test": "vitest --watch=false"
 	},
 	"dependencies": {
 		"@directus/utils": "workspace:*",
 		"fs-extra": "11.1.1",
+		"lodash-es": "4.17.21",
 		"tmp": "0.2.1",
 		"zod": "3.21.4"
 	},
@@ -40,6 +41,7 @@
 		"@directus/types": "workspace:*",
 		"@types/express": "4.17.17",
 		"@types/fs-extra": "11.0.1",
+		"@types/lodash-es": "4.17.9",
 		"@types/node": "18.16.12",
 		"@types/tmp": "0.2.3",
 		"@vitest/coverage-c8": "0.31.1",
