--- a/api/src/database/system-data/collections/collections.yaml
+++ b/api/src/database/system-data/collections/collections.yaml
@@ -95,3 +95,6 @@ data:
 
   - collection: directus_translations
     note: $t:directus_collection.directus_translations
+
+  - collection: directus_versions
+    note: $t:directus_collection.directus_versions
